added images & changed html & css

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,46 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/main.js" defer></script>
-    <title>Document</title>
+    <title>Buffalo Chicken Pasta Recipe</title>
   </head>
   <body>
-    Hello, world!
+    <h1>Buffalo Chicken Pasta Recipe</h1>
+    <img src="./images/DSCN8541.jpg" alt="Buffalo chicken pasta" />
+    <p>
+      A great option for lunch or dinner! Spice Advisory: may be too hot if too
+      much hot sauce is used!
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <p>* 400g cream cheese, softened</p>
+    <p>* 250ml hot sauce</p>
+    <p>* 150ml double cream</p>
+    <p>* 2 tbsp Italian herbs</p>
+    <p>* 1 tsp salt</p>
+    <p>* 1 tsp pepper</p>
+    <p>* 3 cooked chicken breasts, shredded</p>
+    <p>* 400g fussili pasta, cooked to packet instructions</p>
+    <p>* Grated cheddar</p>
+
+    <h3>Directions</h3>
+    <img src="./images/1st direction.webp" alt="Oven preheating" />
+    <p>1. Preheat the oven to 180°C/360°F.</p>
+    <img src="./images/2nd direction.webp" alt="mixing" />
+    <p>
+      2. Mix the cream cheese, hot sauce, double cream, Italian herbs, salt and
+      pepper together to make a smooth sauce.
+    </p>
+    <img src="./images/3rd direction.jpg" alt="shredded chicken" />
+    <p>
+      3. Add the shredded chicken and cooked pasta. Stir everything together,
+      then pour into a baking dish and scatter with cheddar.
+    </p>
+    <img src="./images/4th direction.jpg" alt="20 minute timer" />
+    <p>4. Bake for 20 minutes or until all melted and delicious.</p>
+    <img src="./images/5th direction.jpg" alt="serving pasta" />
+    <p>5. Serve the pasta.</p>
+    <img src="./images/6th direction.jpg" alt="enjoying food" />
+    <p>6. Enjoy!</p>
   </body>
 </html>
