--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <h1>Buffalo Chicken Pasta Recipe</h1>
     <img src="./images/DSCN8541.jpg" alt="Buffalo chicken pasta" />
     <p>
-      A great option for lunch or dinner! Spice Advisory: may be too hot if too
-      much hot sauce is used!
+      A great option for lunch or dinner!</p>
+      
+      <p>Spice Advisory: may be too hot if too
+        much hot sauce is used!</p>
     </p>
 
     <h2>Ingredients</h2>
@@ -29,6 +31,59 @@
     <p>* 400g fussili pasta, cooked to packet instructions</p>
     <p>* Grated cheddar</p>
 
+    <h3>Directions</h3>
+    <!--Slideshow container -->
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <div class="1st direction">1 / 6</div>
+        <img src="./images/1st direction.webp" style="width: 100%" />
+        <div class="text">1. Preheat the oven to 180°C/360°F.</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="2nd direction">2 / 6</div>
+        <img src="./images/2nd direction.webp" style="width: 100%" />
+        <div class="text">
+          2. Mix the cream cheese, hot sauce, double cream, Italian herbs, salt
+          and pepper together to make a smooth sauce.
+        </div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="3rd direction">3 / 6</div>
+        <img src="./images/3rd direction.jpg" style="width: 100%" />
+        <div class="text">
+          3. Add the shredded chicken and cooked pasta. Stir everything
+          together, then pour into a baking dish and scatter with cheddar.
+        </div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="4th direction">4 / 6</div>
+        <img src="./images/4th direction.jpg" style="width: 100%" />
+        <div class="text">
+          4. Bake for 20 minutes or until all melted and delicious.
+        </div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="5th direction">5 / 6</div>
+        <img src="./images/5th direction.jpg" style="width: 100%" />
+        <div class="text">5. Serve the pasta.</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="6th direction">6 / 6</div>
+        <img src="./images/6th direction.jpg" style="width: 100%" />
+        <div class="text">6. Enjoy!</div>
+      </div>
+
+      <!-- Next & previous buttons-->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+    <!-- 
     <h3>Directions</h3>
     <img src="./images/1st direction.webp" alt="Oven preheating" />
     <p>1. Preheat the oven to 180°C/360°F.</p>
@@ -47,6 +102,8 @@
     <img src="./images/5th direction.jpg" alt="serving pasta" />
     <p>5. Serve the pasta.</p>
     <img src="./images/6th direction.jpg" alt="enjoying food" />
-    <p>6. Enjoy!</p>
+    <p>6. Enjoy!</p> -->
+
+    <p>The link to the source I used for this recipe is <a href="https://twistedfood.co.uk/buffalo-chicken-pasta-bake-cheesy-garlic-bread">here.</a></p>
   </body>
 </html>
